--- a/workflows/snake.yml
+++ b/workflows/snake.yml
@@ -22,7 +22,7 @@ jobs:
       - name: generate snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: Gabrielflazaro
+          github_user_name: Gabrielfllazaro
           outputs: dist/snake.svg?palette=github-dark
 
 
